--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@angular/platform-browser": "~10.2.5",
     "@angular/platform-browser-dynamic": "~10.2.5",
     "@angular/router": "~10.2.5",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@ngx-translate/core": "^13.0.0",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^5.1.0",
     "core-js": "^2.5.4",
+    "jquery": "^3.6.0",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^14.1.0",
     "ngx-translate-multi-http-loader": "^3.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.7",
     "rxjs-compat": "^6.5.3",
     "sweetalert2": "^11.1.3",
