Add toster massages and reset password done

--- a/src/app/modules/core/services/config/url.config.json
+++ b/src/app/modules/core/services/config/url.config.json
@@ -4,7 +4,8 @@
       "SIGNUP": "auth/signup",
       "SIGNIN": "auth/signin",
       "RESETPASSWORD": "auth/forget/password",
-      "SETNEWPASSWORD": "auth/forget/password/set/password"
+      "SETNEWPASSWORD": "auth/forget/password/set/password",
+      "CHANGE_PASSWORD": "auth/reset/password"
     }
   }
 }
