--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@ngx-translate/core": "^13.0.0",
+    "apexcharts": "^3.28.1",
     "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.1",
     "core-js": "^2.5.4",
     "jquery": "^3.6.0",
+    "ng-apexcharts": "^1.5.12",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^14.1.0",
     "ngx-translate-multi-http-loader": "^3.0.0",
@@ -41,9 +44,10 @@
     "@angular/cli": "~10.2.3",
     "@angular/compiler-cli": "~10.2.5",
     "@angular/language-service": "~10.2.5",
-    "@types/node": "^12.11.1",
+    "@types/chart.js": "^2.9.34",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
